<resources>
    <string name="app_name">Task Master</string>
    <string name="app_update">"Ostatnia aktualizacja aplikacji: 20-05-2015"</string>
    <string name="app_version">"Wersja 0.5 Beta"</string>
    <string name="please_send_info">"Pómóż nam udoskonalić aplikację, prześlij swoją opinię!</string>
    <string name="send">"Wyślij"</string>

    <string name="refreshing">"Proszę czekać, trwa aktualizacja danych..."</string>



    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_main_view">MainView</string>
    <string name="title_activity_data_picket">DataPicket</string>
    <string name="title_activity_get_date">GetDate</string>

    <!--Podział tasków ze względu na daty /-->
    <string-array name="task_headers">
        <item>"Dzisiaj"</item>
        <item>"Jutro"</item>
        <item>"Kiedyś"</item>
    </string-array>
    <string name="todays_tasks">Dzisiaj</string>
    <string name="tomorrow_tasks">Jutro</string>
    <string name="future_tasks">Kiedyś</string>
    <string name="title_activity_create_task">create_task</string>
    <string name="title_activity_task_llist_vie_pattern">TaskLListViePattern</string>
    <string name="title_activity_tab_host">TabHost</string>
    <string name="title_activity_groups_view">Grupy</string>
    <string name="title_activity_add_group">AddGroup</string>
    <string name="title_activity_edit_group">EditGroup</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_task_executor">ChooseTaskExecutor</string>

</resources>
