<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="15dp">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/app_name_logo"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/app_name"
        android:textColor="@color/my_text"
        android:layout_toRightOf="@+id/logo"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="28dp"/>

    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/app_update"
        android:layout_below="@id/app_name_logo"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/app_version"
        android:layout_below="@id/update"
        android:layout_marginLeft="15dp"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_marginTop="25dp"
        android:id="@+id/scroller">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginLeft="15dp"
            android:hint = "@string/please_send_info"/>

        </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scroller"
        android:layout_marginTop="15dp"
        android:text="@string/send"
        android:gravity="center"
        android:id="@+id/send"/>

</RelativeLayout>